[Fix] Evendetail: remove linebreak in subtitle

--- a/theme/source/modules/eventdetail/eventdetail.scss
+++ b/theme/source/modules/eventdetail/eventdetail.scss
@@ -20,8 +20,6 @@ $m: "mod_eventdetail";
 	}
 
 	&__date {
-		text-align: center;
-		display: block;
 	}
 
 	&__section {
